# valueNotifier

./: .gitignore  CMakeLists.txt  README.md  cstd.cmake  setupDB.md
accountRegistration/: RegistrationManager.py  genInvCode.py
client/: client.py
include/market_database/: alphaVantage.hpp  dataSource.hpp
src/: main.cpp
src/market_database/: CMakeLists.txt  alphaVantage.cpp  dataSource.cpp  tickerList.cpp
sycee/: .gitignore  manage.py  setup.sh
sycee/accounts/: admin.py  forms.py  models.py  urls.py  views.py
sycee/accounts/templates/accounts/: login.html  register.html
sycee/accounts/templates/admin/accounts/invitationcode/: change_list.html
sycee/accounts/templates/registration/: logged_out.html  login.html
sycee/accounts/tests/: test_forms.py  test_models.py  test_views.py
sycee/stock/: admin.py  models.py  urls.py  views.py
sycee/stock/migrations/: 0001_initial.py
sycee/stock/templates/: base_generic.html  index.html
sycee/sycee/: asgi.py  settings.py  urls.py  wsgi.py
tests/: CMakeLists.txt  test_example.cpp
